--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "npx redoc-cli bundle src/swagger.yaml -o public/redoc-static.html && vue-cli-service build",
     "postbuild": "mv dist/favicon.ico dist/static/favicon.ico",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
@@ -41,8 +41,11 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-vue": "^7.8.0",
+    "handlebars": "^4.7.7",
     "husky": "^6.0.0",
     "prettier": "^2.2.1",
+    "redoc": "*",
+    "redoc-cli": "^0.11.2",
     "sass": "^1.32.8",
     "sass-loader": "8.0.2",
     "typescript": "~4.2.3",
