--- a/package.json
+++ b/package.json
@@ -11,42 +11,43 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@vueuse/core": "^5.3.0",
     "axios": "^0.21.1",
     "bulma": "^0.9.3",
-    "core-js": "^3.15.2",
+    "core-js": "^3.16.1",
     "dayjs": "^1.10.6",
     "qs": "^6.10.1",
-    "vue": "^3.1.5",
+    "vue": "^3.2.2",
     "vue-concurrency": "^2.1.2",
     "vue-router": "^4.0.0-rc.6"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.24",
+    "@types/jest": "26.0.24",
     "@types/qs": "^6.9.7",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
     "@vue/cli-plugin-babel": "~4.5.13",
     "@vue/cli-plugin-eslint": "~4.5.13",
     "@vue/cli-plugin-router": "~4.5.13",
     "@vue/cli-plugin-typescript": "~4.5.13",
     "@vue/cli-plugin-unit-jest": "~4.5.13",
     "@vue/cli-service": "~4.5.13",
-    "@vue/compiler-sfc": "^3.1.5",
+    "@vue/compiler-sfc": "^3.2.2",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/test-utils": "^2.0.0-rc.10",
-    "babel-jest": "^26.6.3",
+    "@vue/test-utils": "^2.0.0-rc.12",
+    "babel-jest": "26.6.3",
     "eslint": "6.8.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-vue": "^7.14.0",
+    "eslint-plugin-vue": "^7.16.0",
     "handlebars": "^4.7.7",
     "husky": "^7.0.1",
     "prettier": "^2.3.2",
     "redoc": "*",
-    "redoc-cli": "^0.12.2",
-    "sass": "^1.36.0",
+    "redoc-cli": "^0.12.3",
+    "sass": "^1.37.5",
     "sass-loader": "8.0.2",
     "typescript": "~4.3.5",
     "vue-jest": "^5.0.0-alpha.10"
