--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/core": "^5.3.0",
     "axios": "^0.21.1",
     "bulma": "^0.9.3",
+    "bulma-helpers": "^0.4.0",
     "core-js": "^3.16.1",
     "dayjs": "^1.10.6",
     "qs": "^6.10.1",
