--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "bulma-helpers": "^0.4.0",
     "core-js": "^3.16.1",
     "dayjs": "^1.10.6",
-    "qs": "^6.10.1",
+    "js-sha256": "^0.9.0",
+    "url-parse": "^1.5.3",
     "vue": "^3.2.2",
     "vue-concurrency": "^2.1.2",
     "vue-router": "^4.0.0-rc.6"
   },
   "devDependencies": {
     "@types/jest": "26.0.24",
-    "@types/qs": "^6.9.7",
+    "@types/url-parse": "^1.4.4",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "@vue/cli-plugin-babel": "~4.5.13",
