--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.16.1",
     "dayjs": "^1.10.6",
     "js-sha256": "^0.9.0",
+    "truncate": "^2.1.0",
     "url-parse": "^1.5.3",
     "vue": "^3.2.2",
     "vue-concurrency": "^2.1.2",
