--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "@vueuse/core": "^7.4.1",
-    "axios": "^0.24.0",
+    "@vueuse/core": "^7.5.4",
+    "axios": "^0.25.0",
     "bulma": "^0.9.3",
     "bulma-helpers": "^0.4.2",
-    "core-js": "^3.20.1",
+    "core-js": "^3.20.3",
     "dayjs": "^1.10.7",
     "highlight.js": "^11.4.0",
     "js-sha256": "^0.9.0",
     "truncate": "^3.0.0",
-    "url-parse": "^1.5.3",
-    "vue": "^3.2.26",
-    "vue-concurrency": "^2.2.1",
+    "url-parse": "^1.5.4",
+    "vue": "^3.2.28",
+    "vue-concurrency": "2.2.1",
     "vue-json-pretty": "^2.0.6",
     "vue-router": "^4.0.0-rc.6",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
-    "@types/jest": "27.0.3",
-    "@types/url-parse": "^1.4.6",
+    "@types/jest": "27.4.0",
+    "@types/url-parse": "^1.4.7",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@vue/cli-plugin-babel": "~4.5.15",
@@ -39,7 +39,7 @@
     "@vue/cli-plugin-typescript": "~4.5.15",
     "@vue/cli-plugin-unit-jest": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
-    "@vue/compiler-sfc": "^3.2.26",
+    "@vue/compiler-sfc": "^3.2.28",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-rc.18",
@@ -53,9 +53,9 @@
     "prettier": "^2.5.1",
     "redoc": "*",
     "redoc-cli": "^0.13.2",
-    "sass": "^1.45.1",
+    "sass": "^1.49.0",
     "sass-loader": "8.0.2",
-    "typescript": "~4.5.4",
+    "typescript": "~4.5.5",
     "vue-jest": "^5.0.0-alpha.10"
   }
 }
