--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "vue": "^3.2.28",
     "vue-concurrency": "2.2.1",
     "vue-json-pretty": "^2.0.6",
+    "vue-prism-editor": "^2.0.0-alpha.2",
     "vue-router": "^4.0.0-rc.6",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
     "@types/jest": "27.4.0",
+    "@types/prismjs": "^1.16.6",
     "@types/url-parse": "^1.4.7",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
