--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "@vueuse/core": "^7.5.4",
+    "@vueuse/core": "^7.5.5",
+    "@vueuse/router": "^7.5.5",
     "axios": "^0.25.0",
     "bulma": "^0.9.3",
     "bulma-helpers": "^0.4.2",
