--- a/package.json
+++ b/package.json
@@ -11,54 +11,56 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@vueuse/core": "^7.5.5",
-    "@vueuse/router": "^7.5.5",
-    "axios": "^0.25.0",
+    "@fortawesome/fontawesome-free": "^6.0.0",
+    "@vueuse/core": "^7.6.2",
+    "@vueuse/router": "^7.6.2",
+    "axios": "^0.26.0",
     "bulma": "^0.9.3",
     "bulma-helpers": "^0.4.2",
-    "core-js": "^3.20.3",
+    "core-js": "^3.21.1",
     "dayjs": "^1.10.7",
     "highlight.js": "^11.4.0",
     "js-sha256": "^0.9.0",
+    "regenerator-runtime": "^0.13.9",
     "truncate": "^3.0.0",
-    "url-parse": "^1.5.4",
-    "vue": "^3.2.28",
+    "url-parse": "^1.5.10",
+    "vue": "^3.2.31",
     "vue-concurrency": "2.2.1",
     "vue-json-pretty": "^2.0.6",
     "vue-prism-editor": "^2.0.0-alpha.2",
-    "vue-router": "^4.0.0-rc.6",
+    "vue-router": "^4.0.12",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
     "@types/jest": "27.4.0",
-    "@types/prismjs": "^1.16.6",
-    "@types/url-parse": "^1.4.7",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "@vue/cli-plugin-babel": "~4.5.15",
-    "@vue/cli-plugin-eslint": "~4.5.15",
-    "@vue/cli-plugin-router": "~4.5.15",
-    "@vue/cli-plugin-typescript": "~4.5.15",
-    "@vue/cli-plugin-unit-jest": "~4.5.15",
-    "@vue/cli-service": "~4.5.15",
-    "@vue/compiler-sfc": "^3.2.28",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/test-utils": "^2.0.0-rc.18",
-    "babel-jest": "26.6.3",
-    "eslint": "6.8.0",
-    "eslint-plugin-prettier": "^3.4.1",
+    "@types/prismjs": "^1.26.0",
+    "@types/url-parse": "^1.4.8",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "@vue/cli-plugin-babel": "~5.0.1",
+    "@vue/cli-plugin-eslint": "~5.0.1",
+    "@vue/cli-plugin-router": "~5.0.1",
+    "@vue/cli-plugin-typescript": "~5.0.1",
+    "@vue/cli-plugin-unit-jest": "~5.0.1",
+    "@vue/cli-service": "~5.0.1",
+    "@vue/compiler-sfc": "^3.2.31",
+    "@vue/eslint-config-typescript": "^9.1.0",
+    "@vue/test-utils": "2.0.0-rc.17",
+    "@vue/vue3-jest": "^27.0.0-alpha.4",
+    "babel-jest": "27.5.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-vue": "^7.20.0",
+    "eslint-plugin-vue": "^8.5.0",
     "handlebars": "^4.7.7",
     "husky": "^7.0.4",
     "prettier": "^2.5.1",
     "redoc": "*",
-    "redoc-cli": "^0.13.2",
-    "sass": "^1.49.0",
-    "sass-loader": "8.0.2",
-    "typescript": "~4.5.5",
-    "vue-jest": "^5.0.0-alpha.10"
+    "redoc-cli": "^0.13.7",
+    "sass": "^1.49.8",
+    "sass-loader": "12.6.0",
+    "ts-jest": "^27.1.3",
+    "typescript": "~4.5.5"
   }
 }
