--- a/package.json
+++ b/package.json
@@ -11,54 +11,53 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.1.0",
-    "@vueuse/core": "^8.1.2",
-    "@vueuse/router": "^8.1.2",
-    "axios": "^0.26.1",
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@vueuse/core": "^8.4.0",
+    "@vueuse/router": "^8.4.0",
+    "axios": "^0.27.2",
     "bulma": "^0.9.3",
     "bulma-helpers": "^0.4.2",
-    "core-js": "^3.21.1",
-    "dayjs": "^1.11.0",
+    "core-js": "^3.22.4",
+    "dayjs": "^1.11.1",
     "js-sha256": "^0.9.0",
     "regenerator-runtime": "^0.13.9",
     "truncate": "^3.0.0",
     "url-parse": "^1.5.10",
-    "vue": "^3.2.31",
+    "vue": "^3.2.33",
     "vue-concurrency": "2.2.1",
     "vue-json-pretty": "^2.0.6",
     "vue-prism-editor": "^2.0.0-alpha.2",
-    "vue-router": "^4.0.14",
-    "yaml": "^1.10.2"
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
-    "@types/jest": "27.4.1",
+    "@types/jest": "27.5.0",
     "@types/prismjs": "^1.26.0",
     "@types/url-parse": "^1.4.8",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
-    "@vue/cli-plugin-babel": "~5.0.3",
-    "@vue/cli-plugin-eslint": "~5.0.3",
-    "@vue/cli-plugin-router": "~5.0.3",
-    "@vue/cli-plugin-typescript": "~5.0.3",
-    "@vue/cli-plugin-unit-jest": "~5.0.3",
-    "@vue/cli-service": "~5.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "@vue/cli-plugin-babel": "~5.0.4",
+    "@vue/cli-plugin-eslint": "~5.0.4",
+    "@vue/cli-plugin-router": "~5.0.4",
+    "@vue/cli-plugin-typescript": "~5.0.4",
+    "@vue/cli-plugin-unit-jest": "~5.0.4",
+    "@vue/cli-service": "~5.0.4",
     "@vue/eslint-config-typescript": "^9.1.0",
-    "@vue/test-utils": "2.0.0-rc.17",
+    "@vue/test-utils": "2.0.0-rc.21",
     "@vue/vue3-jest": "^27.0.0-alpha.4",
     "babel-jest": "27.5.1",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.4.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-vue": "^8.5.0",
+    "eslint-plugin-vue": "^8.7.1",
     "handlebars": "^4.7.7",
     "husky": "^7.0.4",
-    "prettier": "^2.6.0",
+    "prettier": "^2.6.2",
     "redoc": "*",
-    "redoc-cli": "^0.13.9",
-    "sass": "^1.49.9",
+    "redoc-cli": "^0.13.11",
+    "sass": "^1.51.0",
     "sass-loader": "12.6.0",
-    "ts-jest": "^27.1.3",
-    "typescript": "~4.6.2"
+    "ts-jest": "^27.1.4",
+    "typescript": "~4.6.4"
   }
 }
