--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "npx redoc-cli bundle src/swagger.yaml -o public/redoc-static.html && vue-cli-service build",
+    "serve": "vite",
+    "build": "npx redoc-cli build src/swagger.yaml -o public/redoc-static.html && vite build",
     "postbuild": "mv dist/favicon.ico dist/static/favicon.ico",
-    "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint",
+    "test:unit": "jest",
+    "lint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore --fix src --fix tests",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -30,21 +30,16 @@
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
-    "@types/jest": "27.5.0",
+    "@types/jest": "29.1.2",
     "@types/prismjs": "^1.26.0",
     "@types/url-parse": "^1.4.8",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
-    "@vue/cli-plugin-babel": "~5.0.8",
-    "@vue/cli-plugin-eslint": "~5.0.8",
-    "@vue/cli-plugin-router": "~5.0.8",
-    "@vue/cli-plugin-typescript": "~5.0.8",
-    "@vue/cli-plugin-unit-jest": "~5.0.8",
-    "@vue/cli-service": "~5.0.8",
-    "@vue/eslint-config-typescript": "^11.0.2",
+    "@vitejs/plugin-vue": "^3.1.2",
     "@vue/test-utils": "2.1.0",
-    "@vue/vue3-jest": "^27.0.0-alpha.4",
-    "babel-jest": "27.5.1",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/vue3-jest": "^29.1.1",
+    "babel-jest": "29.1.2",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -53,11 +48,12 @@
     "handlebars": "^4.7.7",
     "husky": "^8.0.1",
     "prettier": "^2.7.1",
-    "redoc": "*",
-    "redoc-cli": "^0.13.19",
+    "redoc": "2.0.0",
+    "redoc-cli": "^0.13.20",
     "sass": "^1.55.0",
     "sass-loader": "13.1.0",
-    "ts-jest": "^27.1.5",
-    "typescript": "~4.8.4"
+    "ts-jest": "^29.0.3",
+    "typescript": "~4.8.4",
+    "vite": "^3.1.6"
   }
 }
