--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@vueuse/core": "^9.12.0",
     "@vueuse/router": "^9.12.0",
-    "axios": "^1.3.2",
+    "axios": "^1.3.3",
     "bulma": "^0.9.4",
     "bulma-helpers": "^0.4.3",
     "dayjs": "^1.11.7",
     "js-sha256": "^0.9.0",
     "regenerator-runtime": "^0.13.11",
     "truncate": "^3.0.0",
+    "ts-dedent": "^2.2.0",
     "url-parse": "^1.5.10",
+    "uuidv4": "^6.2.13",
     "vue": "^3.2.47",
     "vue-concurrency": "4.0.0",
     "vue-json-pretty": "^2.2.3",
@@ -31,11 +33,11 @@
     "@types/jest": "29.4.0",
     "@types/prismjs": "^1.26.0",
     "@types/url-parse": "^1.4.8",
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "@typescript-eslint/parser": "^5.51.0",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/test-utils": "2.2.10",
     "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/test-utils": "2.2.10",
     "@vue/vue3-jest": "^29.2.2",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
@@ -47,9 +49,9 @@
     "prettier": "^2.8.4",
     "redoc": "2.0.0",
     "redoc-cli": "^0.13.20",
-    "sass": "^1.58.0",
+    "sass": "^1.58.3",
     "ts-jest": "^29.0.5",
     "typescript": "~4.9.5",
-    "vite": "^4.1.1"
+    "vite": "^4.1.2"
   }
 }
